--- a/huli-1/src/css/main.styl
+++ b/huli-1/src/css/main.styl
@@ -16,6 +16,25 @@ body
   min-height: 100vh
   padding-top: 30px
 
+.menu
+  display: flex
+  position: relative
+  justify-content: center
+  color: white
+  height: 60px
+
+.lang
+  display: flex
+  font-size: 18px
+  height: 60px
+  color: white
+  justify-content: center
+  align-items: center
+
+  a
+    cursor: pointer
+    &:hover
+      color: #873FBF
 .preview
   height: 168px
   position: relative
