--- a/twitch_v2/huli-2/src/css/main.css
+++ b/twitch_v2/huli-2/src/css/main.css
@@ -3,7 +3,10 @@ body {
   background-attachment: fixed;
   margin: 0;
 }
-
+.carousel-inner img {
+  width: 100%;
+  height: 100%;
+}
 
 #mainNavbar {
   font-size: 1.5rem;
